# kettos-inga

./: CMakeLists.txt  Untitled1.ipynb  abrazolas-tetszoleges.ipynb  abrazolas.ipynb  atfordulas-idofuggese.ipynb  changes.txt  kettos_inga_jegyzokonyv.txt  main.cpp  main2.cpp  main3.cpp  readme.ipynb  readme.md
app/: main.cpp
figures/: phi1_flip_l1_1_l2_1_m1_1_m2_1_o1_0_o2_0_T_30_h_0.001_phi_-3.1_to_3.1_res_100.csv  phi1_flip_l1_1_l2_1_m1_1_m2_1_o1_0_o2_0_T_30_h_0.01_phi_-3.1_to_3.1_res_100.csv  phi2_flip_l1_1_l2_1_m1_1_m2_1_o1_0_o2_0_T_30_h_0.001_phi_-3.1_to_3.1_res_100.csv  phi2_flip_l1_1_l2_1_m1_1_m2_1_o1_0_o2_0_T_30_h_0.01_phi_-3.1_to_3.1_res_100.csv
include/double_pendulum/: analysis.h  core.h  simulation.h
src/: analysis.cpp  core.cpp  simulation.cpp
